# smart-irrigation-controller

./: .gitignore  CODEBASE_GUIDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
doc/arch/: adr-001-rl-approach.md  design.md
doc/arch/adr/: adr-000.md
doc/research/: rl-irrigation-research.md
docs/: architecture.md  hardware-setup.md
scripts/: callbacks.py  fetch_weather.py  fetch_weather_hourly.py  train.py
src/irrigation/: __init__.py  cli.py  config.py  config_loader.py  controller.py  zone_config.py
src/irrigation/actuators/: __init__.py  base.py  simulation.py  valve.py
src/irrigation/crops/: __init__.py  base.py  chili.py
src/irrigation/rl/: __init__.py  agent.py  dynamic_stage.py  environment.py  gym_env.py  health_tracker.py  reward.py  vitality.py
src/irrigation/sensors/: __init__.py  base.py  historical.py  simulation.py  soil.py  weather.py
src/irrigation/weather/: weather_data.py
tests/: test_actuators.py  test_config.py  test_crops.py  test_rl_agent.py  test_rl_environment.py  test_sensors.py
wandb/: latest-run
wandb/run-20260528_182711-hh4a5vk1/: run-hh4a5vk1.wandb
wandb/run-20260528_182711-hh4a5vk1/files/: config.yaml  events.out.tfevents.1779973037.nathiskar-Dell-G15-5511.55348.0  events.out.tfevents.1779973046.nathiskar-Dell-G15-5511.55348.1  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260528_210752-swkw4xf5/: run-swkw4xf5.wandb
wandb/run-20260528_210752-swkw4xf5/files/: config.yaml  events.out.tfevents.1779982683.nathiskar-Dell-G15-5511.255297.0  events.out.tfevents.1779982716.nathiskar-Dell-G15-5511.255297.1  events.out.tfevents.1779982760.nathiskar-Dell-G15-5511.255297.2  wandb-metadata.json  wandb-summary.json
work_done/: 2026-05-16.md  2026-06-12.md  progress_report_2026-05-16.md
